2008-01-04  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-from-buffer):
	Call byte-compile-warn-about-unresolved-functions outside
	the with-current-buffer.
	(byte-compile-insert-header): Use with-current-buffer.

2008-01-04  Glenn Morris  <rgm@gnu.org>

	* startup.el (fancy-about-screen): Remove reference to deleted
	`fancy-splash-help-echo' variable.

	* version.el (emacs-copyright): Update to 2008.

	* net/tramp-smb.el (tramp-smb-handle-insert-directory): Use mapc
	rather than mapcar.

	* progmodes/cc-vars.el (defcustom-c-stylevar): Revert previous
	change (merge mistake).

	* doc-view.el (doc-view-search-internal): Don't use `incf'.

	* doc-view.el (bookmark-make-cell-function, bookmark-get-filename)
	(bookmark-get-bookmark-record):
	* image-mode.el (bookmark-make-cell-function)
	(bookmark-get-filename, bookmark-get-bookmark-record)
	(bookmark-get-position):
	* log-view.el (vc-modify-change-comment):
	* progmodes/grep.el (find-name-arg): Declare for compiler.

2008-01-04  Juanma Barranquero  <lekktu@gmail.com>

	* savehist.el (savehist-coding-system): Default to a variant coding
	system with explicit unix end-of-line conversion, which is safer.

2008-01-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ibuf-ext.el (mode-name sorter, ibuffer-mark-by-mode-regexp):
	* ibuffer.el (mode column): Use format-mode-line.

	* server.el (server-create-window-system-frame): Remove workaround for
	a bug that has been fixed.

2008-01-03  Magnus Henoch  <magnus@zemdatav>

	* net/dbus.el (dbus-name-owner-changed-handler):
	Use dbus-unregister-object instead of dbus-unregister-signal.

2008-01-03  Drew Adams  <drew.adams@oracle.com>

	* frame.el (frame-geom-value-cons, frame-geom-spec-cons): New fns.

2008-01-03  Richard Stallman  <rms@gnu.org>

	* replace.el (occur-context-lines): New subroutine,
	broken out of occur-engine.
	(occur-engine): Call it.

2008-01-03  Alexandre Julliard  <julliard@winehq.org>
